openmpi (1.3.3-2) unstable; urgency=low

  * Removing ancient mpirun alternatives in preinst. Closes: #534740, #544372.

 -- Manuel Prinz <manuel@debian.org>  Mon, 12 Oct 2009 23:01:30 +0200

openmpi (1.3.3-1) unstable; urgency=low

  * New upstream version
  * Change of my email address since I am now DD    
  * Standards-Version updated to 3.8.3
  * XS-Dm-Upload-Allowed tag removed
  * Patch disable-memory-allocator (see bug #531522) removed. Applied upstream

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 29 Aug 2009 18:39:48 +0200

openmpi (1.3.2-4) unstable; urgency=low

  [ Cyril Brulebois ]
  * Fix installability of libopenmpi-dev on non-Linux architectures, where
    libibverbs-dev isn't built (due to its being Linux-specific) by removing
    the latter from the dependencies of the former for kfreebsd-* and
    hurd-i386 (for reference, that was already done for Build-Depends).
    (Closes: #535225)

 -- Sylvestre Ledru <sylvestre.ledru@inria.fr>  Tue, 30 Jun 2009 23:52:42 +0200

openmpi (1.3.2-3) unstable; urgency=low

  * Re-uploading, as last upload was not successful.
  * Acknowledgement of NMU. Thanks to Steve M. Robbins for the patches and
    NMUs! Closes: #531522.
  * Removing ancient mpicc, mpiCC and mpiexec master alternatives in preinst.
    Closes: #531184, #532008, #532910.
  * debian/control: Bumped Standards-Version. No changes needed.
  * Fixed typo in README.Debian of openmpi-bin.

 -- Manuel Prinz <manuel@debian.org>  Wed, 24 Jun 2009 00:33:23 +0200

openmpi (1.3.2-2.2) unstable; urgency=low

  * Non-Maintainer Upload (NMU)
  * debian/patches/disable-memory-allocator: Replace with improved patch
    from upstream.

 -- Steve M. Robbins <smr@debian.org>  Sun, 21 Jun 2009 13:08:05 -0500

openmpi (1.3.2-2.1) unstable; urgency=low

  * Non-Maintainer Upload (NMU)
  * debian/patches/disable-memory-allocator: New.  Patch
    opal/mca/memory/ptmalloc2/hooks.c to add check for environment