@@ -1,0 +1,13 @@
+usr/bin/ompi-restart
+usr/bin/orte-restart
+usr/bin/opal-restart
+usr/bin/ompi-checkpoint
+usr/bin/orte-checkpoint
+usr/bin/opal-checkpoint
+usr/share/man/man1/ompi-checkpoint.1
+usr/share/man/man1/opal-checkpoint.1
+usr/share/man/man1/orte-checkpoint.1
+usr/share/man/man1/ompi-restart.1
+usr/share/man/man1/opal-restart.1
+usr/share/man/man1/orte-restart.1
+usr/lib/openmpi/lib/openmpi/mca_crs_blcr.so
