@@ -1,8 +1,11 @@
 openmpi (1.3.3-2) unstable; urgency=low
 
   * Removing ancient mpirun alternatives in preinst. Closes: #534740, #544372.
+  * Build with BLCR support on supported architectures. The openmpi-checkpoint
+    package includes the binaries for checkpointing and documentation. Many
+    thanks to Alan Woodland for the implementation!
 
- -- Manuel Prinz <manuel@debian.org>  Mon, 12 Oct 2009 23:01:30 +0200
+ -- Manuel Prinz <manuel@debian.org>  Mon, 12 Oct 2009 23:46:04 +0200
 
 openmpi (1.3.3-1) unstable; urgency=low
 
